# qalsh4c

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
backup/: ann_searcher.h  b_plus_tree.cc  chamfer_estimator.cc  chamfer_estimator_main.cc  command.h  constants.h  dataset_generator.cc  dataset_generator.h  dataset_generator_main.cc  estimator.cc  generate_dataset_command.h  global.cc  global.h  indexer.cc  indexer.h  main.cc  point_set.h  quadtree.cc  quadtree.h  timer.cc  timer.h  utils.cc  utils.h  weights_generator.cc
data/federalist/: metadata.json
data/gmm/: metadata.json
data/synthetics/: metadata.json
data/toy/: metadata.json  metadata.toml  toy.gt
include/: b_plus_tree.h  chamfer_approx.h  chamfer_estimator.h  const.h  constants.h  crude_nn.h  data_type.h  dataset-generator.h  dataset_generator.h  indexer.h  pager.h  qalsh-chamfer.h  qalsh_chamfer.h  utils.h  utils.hpp
scripts/: chamfer_distance.py  convert_dataset.py  convert_datasets.py  convert_mnist.py  evaluate_sampling.py  generate_dataset.py  gist.py  mnist.py  p53.py  qalsh_ann_vs_sampling.py  run_qalsh_sampling.py  trevi.py  utils.py
src/: ann_searcher.cc  ann_searcher.h  b_plus_tree.cc  b_plus_tree.h  chamfer_approx.cc  chamfer_approx_main.cc  chamfer_estimator.cc  chamfer_estimator_main.cc  command.cc  command.h  constants.h  crude_nn.cc  crude_nn_main.cc  data_type.h  dataset-generator-main.cc  dataset-generator.cc  dataset_generator.cc  dataset_generator.h  dataset_generator_main.cc  dataset_metadata.cc  dataset_metadata.h  estimator.cc  estimator.h  generate_dataset_command.cc  generate_dataset_command.h  global.cc  global.h  hash_table_searcher.cc  hash_table_searcher.h  index_command.cc  index_command.h  indexer-main.cc  indexer.cc  indexer.h  indexer_main.cc  main.cc  pager.cc  point_set.cc  point_set.h  qalsh-chamfer-main.cc  (+20 more)
